--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "install": "^0.13.0",
+    "luxon": "^3.4.4",
     "msw": "^2.3.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -19,6 +20,7 @@
     "react-router-dom": "^6.24.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.4.2",
+    "victory": "^37.0.2",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
@@ -60,6 +62,7 @@
     "@storybook/react": "^8.1.11",
     "@storybook/react-webpack5": "^8.1.11",
     "@storybook/test": "^8.1.11",
+    "@types/luxon": "^3",
     "@types/prop-types": "^15",
     "eslint-plugin-storybook": "^0.8.0",
     "prop-types": "^15.8.1",
