--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@types/react-dom": "^18.0.0",
     "install": "^0.13.0",
     "luxon": "^3.4.4",
+    "mobx": "^6.13.0",
+    "mobx-react-lite": "^4.0.7",
     "msw": "^2.3.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
