--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "algoliasearch": "^4.24.0",
     "install": "^0.13.0",
     "luxon": "^3.4.4",
     "mobx": "^6.13.0",
