--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "algoliasearch": "^4.24.0",
+    "decimal.js": "^10.4.3",
     "install": "^0.13.0",
     "luxon": "^3.4.4",
     "mobx": "^6.13.0",
