--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
   "packageManager": "yarn@4.3.1",
   "devDependencies": {
     "@chromatic-com/storybook": "^1.5.0",
+    "@playwright/test": "^1.45.1",
     "@storybook/addon-essentials": "^8.1.11",
     "@storybook/addon-interactions": "^8.1.11",
     "@storybook/addon-links": "^8.1.11",
